removed unneeded files, added to app.js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	  <meta name="keywords" content="police shootings, Texas police, crime statistics, police use of force">
 	  <meta name="author" content="Marc Anderson">
 	  <meta name="description" content="Number and Location of All Reported Police Officer Involved Shootings in the State of Texas During September 2015">
-	  <link rel="shortcut icon" href="images/favicon.ico">
+	  <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>One September In Texas: Peace Officer Involved Shootings</title>
@@ -90,6 +90,6 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANhKvLu00D4HzEP84t0sGNvSwWmuthcKg">
     </script>
     <script src="js/data.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
