deleted unnecessary files, fixed HTML script tag

--- a/index.html
+++ b/index.html
@@ -107,6 +107,6 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-c7fz6QBhSC8Y6UX6iGCdQdrNebqs918">
     </script>
     <script src="js/data.js"></script>
-    <script src="js/testjs.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
