updated data files, changed title, added to data.xls

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-  <div id="title-bar">One September In Texas: All Reported Peace Officer Involved Shootings</div>
+  <div id="title-bar">Two Months In Texas<br> All Reported Peace Officer Involved Shootings: September - October 2015</div>
     <div class="map-canvas" data-bind="googlemap: { incidents: incidents },
           infowindow: { incident: selectedLocation, messages: datastatus }"></div>
     <div id ="controls">
