updated HTML and CSS

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           infowindow: { incident: selectedLocation, messages: datastatus }"></div>
     <div id ="controls">
     <div id="panel-list" class="test-list-control">
-      <div class="icon-titles">Display locations based on incident result</div>
+      <div class="icon-titles">Display locations based<br>on incident result:</div>
       <ul class="event-list-filters" data-bind="foreach: filters">
         <li data-bind="click: $parent.toggleFilter, attr: {title: hover() }">
           <p class="icons" data-bind="text: status"></p><img data-bind="attr: {src: imgSrc, alt: status}" />
