--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
           <div data-bind="foreach: censusData">
             <h3 class="census-title">County Demographics</h3>      
             <p>Total Population of County: <span data-bind="text: totalPop"></span></p>
-            <p>Total White Population: <span data-bind="text: whitePop"></span></p>
-            <p>Total Black Population: <span data-bind="text: blackPop"></span></p>
-            <p>Total Hispanic/Latino Population: <span data-bind="text: latinoPop"></span></p>
-            <p>Percentage of Population Comprised of <br>Racial or Ethnic Minorities : <span data-bind="text: minPercent"></span></p>
+            <p>White (Non-Hispanic/Latino) Population: <span data-bind="text: whitePop"></span></p>
+            <p>Black Population: <span data-bind="text: blackPop"></span></p>
+            <p>Hispanic/Latino Population: <span data-bind="text: latinoPop"></span></p>
+            <p>Percentage of Population Identifying as Non-White: <span data-bind="text: minPercent"></span></p>
             <h5 class="census-title">Information Provided by <a href="http://www.census.gov/en.html" target="_blank">U.S. Census Bureau</a></h5>
           </div>
         </div>
